kubernetes/services/octoprint.yml
---
apiVersion: v1
kind: Service
metadata:
  name: octoprint
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 5000
    - protocol: TCP
      name: webcam
      port: 8080
  selector:
    app: octoprint

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: octoprint-webcam
  namespace: default
spec:
  basicAuth:
    secret: "octoprint-webcam"

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octoprint-webcam
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-octoprint-webcam@kubernetescrd
spec:
  tls:
    - hosts:
        - octoprint-webcam.${DOMAIN_NAME}
      secretName: ${DOMAIN_NAME}-tls
  rules:
    - host: octoprint-webcam.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: octoprint
                port:
                  name: webcam

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octoprint
  namespace: default
spec:
  tls:
    - hosts:
        - octoprint.${DOMAIN_NAME}
      secretName: ${DOMAIN_NAME}-tls
  rules:
    - host: octoprint.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: octoprint
                port:
                  name: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octoprint
  namespace: default
  labels:
    app: octoprint
  annotations:
    reloader.stakater.com/auto: "true"
    keel.sh/policy: force
    keel.sh/matchTag: "true"
    keel.sh/approvals: "1"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: octoprint
  template:
    metadata:
      labels:
        app: octoprint
    spec:
      affinity:
        nodeAffinity:
          # Only on printer nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: printer
                    operator: In
                    values:
                      - "true"
      containers:
        - name: app
          image: octoprint/octoprint:latest
          resources:
            requests:
              memory: 512Mi
              cpu: 250m
            limits:
              akri.sh/akri-udev-4ad410: "1"
              akri.sh/akri-udev-dbf9ff: "1"
              memory: 2Gi
              cpu: 4000m
          ports:
            - name: web
              containerPort: 5000
            - name: webcam
              containerPort: 8080
          volumeMounts:
            - name: octoprint
              mountPath: /octoprint
      volumes:
        - name: octoprint
          hostPath:
            path: /storage/octoprint
